# TrinityCore-Master-Moon-of-Dragon.com-Custom

./: .env.template  .gitignore  .gitmodules  .mcp.json  ACCESS_VIOLATION_FIX_SUMMARY.md  AGENT_MODEL_RECOMMENDATIONS.md  AGENT_UPGRADE_COMMANDS.md  AI_UPDATE_DEBUG_PATCH.txt  AI_UPDATE_ROOT_CAUSE_FOUND.md  ARCHITECTURE_ASSESSMENT_BOTTLENECK_ANALYSIS.md  AUCTION_SYSTEM_API_FIXES.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE_2025-10-15.md  AUTONOMOUS_PHASE_A_D_PROGRESS_2025-10-15.md  AUTONOMOUS_SESSION_COMPLETE_2025-10-15.md  BASELINE_ROTATION_SYSTEM_COMPLETE.md  BEHAVIORMANAGER_TEST_DELIVERABLE.md  BOOST_SETUP_GUIDE.md  BOTAUCTIONMANAGER_DELIVERY.md  BOT_MOVEMENT_FIX_SUMMARY.md  BOT_SPAWNING_FIX.md  BUILD_DOCUMENTATION.md  BUILD_INSTRUCTIONS.md  BUILD_QUICK_REFERENCE.md  BUILD_STATUS.md  BUILD_SUCCESS_SUMMARY.md  BUILD_SYSTEM_GUIDE.md  CELL_VISIT_DEADLOCK_RESOLUTION.md  CELL_VISIT_ELIMINATION_COMPLETE.md  CELL_VISIT_FIX_SUMMARY.md  CLASSAI_DEDUPLICATION_COMPLETE.md  CLASSAI_DUPLICATION_ANALYSIS.md  CLASSAI_INTEGRATION_COMPLETE.md  CLASSAI_INTEGRATION_COMPLETE_FINAL.md  CLASSAI_INTEGRATION_FIXES_COMPLETE.md  CLASSAI_INTEGRATION_PLAN.md  CLASSAI_INTEGRATION_STATUS.md  CLASSAI_OLD_SYSTEM_REMOVAL_IMPLEMENTATION_GUIDE.md  CLASSAI_OLD_SYSTEM_REMOVAL_PLAN.md  CLASSAI_QUALITY_ASSESSMENT_REPORT.md  CLEANUP_STATUS_2025-10-17.md  (+571 more)
.claude/: ACTION_PLAN_PROGRESS.md  (+189 more)
src/modules/Common/: CMakeLists.txt
src/modules/Common/Logging/: ModuleLogManager.cpp  ModuleLogManager.h
src/modules/Common/Update/: ModuleUpdateManager.cpp  ModuleUpdateManager.h
src/modules/Playerbot/: AUTOMATED_WORLD_POPULATION_DESIGN.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists_QuestManager_Addition.txt  COMPLETE_PHASE4.md  COMPREHENSIVE_AUDIT_REPORT.md  INCOMPLETE_IMPLEMENTATIONS_REPORT.md  INTEGRATION_MIGRATION_PLAN.md  MASTER_PHASE_TRACKER_2025-10-13.md  NEXT_SESSION_START.md  PHASE1_1_QUEST_PATHFINDING_COMPLETE.md  PHASE2_3_IMPLEMENTATION_STATUS.md  PHASE2_3_OPTIMIZATION_FINDINGS.md  PHASE2_COMBAT_AI_COMPLETE.md  PHASE2_TYPED_PACKETS_COMPLETE.md  PHASE4_COMPLETION_GUIDE.md  PHASE4_EVENT_BUS_TEMPLATE.md  PHASE4_EVENT_INTEGRATION_PLAN.md  PHASE4_EVENT_INTEGRATION_PROGRESS.md  PHASE4_HANDOVER.md  PHASE_1_4_UPDATE_SPREADING_DESIGN.md  PHASE_1_4_UPDATE_SPREADING_RESULTS.md  PHASE_4_1_SCRIPT_SYSTEM_COMPLETE.md  PHASE_7_IMPLEMENTATION_PLAN.md  PHASE_A_THREADPOOL_INTEGRATION_DESIGN.md  PHASE_A_THREADPOOL_INTEGRATION_IMPLEMENTATION.md  PlayerbotConfig.h  PlayerbotModule.cpp  PlayerbotModule.h  PlayerbotModuleAdapter.cpp  PlayerbotModuleAdapter.h  SESSION_SUMMARY_2025-10-12.md  TASK_1_2_VENDOR_PURCHASE_COMPLETE.md  THREAD_SAFE_POPULATION_DESIGN.md  URGENT_FIXES_REQUIRED.md  VENDORED_DEPENDENCIES.md
src/modules/Playerbot/AI/: AIBudgetTier.h  AdaptiveAIUpdateThrottler.cpp  AdaptiveAIUpdateThrottler.h  BehaviorManager.cpp  BehaviorManager.h  BehaviorPriorityManager.cpp  BehaviorPriorityManager.h  BotAI.cpp  BotAI.cpp.backup  BotAI.h  BotAIFactory.cpp  BotAIInitializer.h  BotAIQuestIntegration.h  BotAI_EventHandlers.cpp  BotAI_HybridAI.cpp  BotAI_Refactored.cpp  BotAI_Refactored.h  BotAI_StateIntegration.cpp  BotAI_StateIntegration.h  BotAI_UtilityAI.cpp  CooldownManager.cpp  CooldownManager.h  EnhancedBotAI.cpp  EnhancedBotAI.h  ExampleManager.cpp  ExampleManager.h  GameSystems_TestingChecklist.md  GameSystems_UpdateFlow.md  HybridAIController.cpp  HybridAIController.h  InterruptManager.cpp  InterruptManager.h  ObjectCache.cpp  ObjectCache.h  PositionManager.h  ResourceManager.cpp  ResourceManager.h  TargetSelector.h
src/modules/Playerbot/Account/: AccountLinkingManager.cpp  AccountLinkingManager.h  BotAccountMgr.cpp  BotAccountMgr.h
src/modules/Playerbot/Achievements/: AchievementManager.cpp  AchievementManager.h
src/modules/Playerbot/Adapters/: BotSpawnerAdapter.cpp  BotSpawnerAdapter.h
src/modules/Playerbot/Advanced/: AdvancedBehaviorManager.cpp  AdvancedBehaviorManager.h  EconomyManager.cpp  EconomyManager.h  GroupCoordinator.cpp  GroupCoordinator.h  InstanceCoordination.cpp  SocialManager.cpp  SocialManager.h  TacticalCoordinator.cpp  TacticalCoordinator.h
src/modules/Playerbot/Auction/: AuctionEventBus.cpp  AuctionEventBus.h  AuctionEvents.cpp  AuctionEvents.h
src/modules/Playerbot/Aura/: AuraEventBus.cpp  AuraEventBus.cpp.tmp  AuraEventBus.h  AuraEvents.cpp  AuraEvents.h
src/modules/Playerbot/Banking/: BankingManager.cpp  BankingManager.h
src/modules/Playerbot/Character/: BotCharacterDistribution.cpp  BotCharacterDistribution.h  BotCustomizationGenerator.cpp  BotCustomizationGenerator.h  BotLevelDistribution.cpp  BotLevelDistribution.h  BotLevelManager.cpp  BotLevelManager.h  BotNameMgr.cpp  BotNameMgr.h  ZoneLevelHelper.cpp  ZoneLevelHelper.h
src/modules/Playerbot/Chat/: BotChatCommandHandler.cpp  BotChatCommandHandler.h  CHAT_SYSTEM_README.md  ChatTemplateManager.cpp  ChatTemplateManager.h
src/modules/Playerbot/Combat/: CombatEventBus.cpp  CombatEventBus.h  CombatEvents.cpp  CombatEvents.h
src/modules/Playerbot/Commands/: COMMANDS.md  PlayerbotCommands.cpp  PlayerbotCommands.h  PlayerbotCommands_STUB.txt
src/modules/Playerbot/Companion/: BattlePetManager.cpp  BattlePetManager.h  MountManager.cpp  MountManager.h  RidingManager.cpp  RidingManager.h
src/modules/Playerbot/Config/: ConfigManager.cpp  ConfigManager.h  DependencyValidator.cpp  DependencyValidator.h  GuidedSetupHelper.cpp  GuidedSetupHelper.h  ModuleLogManager.cpp  ModuleLogManager.h  PlayerbotConfig.cpp  PlayerbotConfig.h  PlayerbotInventoryConfig.h  PlayerbotLog.cpp  PlayerbotLog.h  PlayerbotQuestConfig.cpp  PlayerbotQuestConfig.h  PlayerbotTradeConfig.cpp  PlayerbotTradeConfig.h  playerbots_gamesystems.conf.dist  playerbots_quest.conf.dist
src/modules/TestModule/: CMakeLists.txt  TestModule.cpp  TestModule.h
tests/: CMakeLists.txt
tests/Phase3/Baseline/: capture_priest_baseline.ps1  priest_baseline_2025-10-17_23-06-34.json  priest_baseline_2025-10-17_23-06-34.md
tests/Phase5/: ActionPriorityQueue_tests.cpp  BehaviorTree_tests.cpp  DecisionFusionSystem_tests.cpp
tests/game/: BotMovementConfig.cpp  BotMovementIntegration.cpp
(+2286 files in other folders)
